--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
             "error",
             "LabeledStatement",
             "WithStatement"
-        ]
+        ],
+        "no-unused-vars": ["error", { "vars": "none", "args": "none", "ignoreRestSiblings": false }]
     }
 }
